2011-03-09  Reinhard Max  <max@suse.de>

	* unix/configure.in: Use a symbol from libXft itself for the link
	test rather than one from libfreetype, because the latter doesn't
	work when the linker is called with --as-needed.
	
2011-01-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkSelect.c: [Patch #3129527]: Fix buffer overflow w/ GCC 4.5 and
	* win/tkWinWm.c       -D_FORTIFY_SOURCE=2. Just the strcpy->memcpy part,
	* unix/tkUnixWm.c     to prevent anything like [Bug #3164879]

2011-01-22  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkEntry.c(ttk::combobox): Add missing 
	'validate' command (reported by schelte).

2011-01-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl:   Make sure to use CONST/VOID in stead of
	* generic/ttk/ttkDecls.h            const/void when appropriate. This allows to
	use const/void in the *.decls file always, genStubs will do the right thing.

2011-01-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:         handle --enable-64bit=ia64 for gcc. BACKPORT.
	* win/configure:      (autoconf-2.59)

2011-01-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/msgbox.tcl: [Patch #3154705] Close button has no effect

2011-01-06  Stuart Cassoff  <stwo@users.sourceforge.net>

	* generic/tkEvent.c:	Cast some NULLs to (void *) in order to quash
	* unix/tkUnixEvent.c:	"missing sentinel in function call"
	* unix/tkUnixKey.c:	compiler warnings.
	* unix/tkUnixRFont.c:

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  [Bug 2446711]: Remove 'allpatch' target.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  Use 'rpmbuild', not 'rpm' [Bug 2537626].

2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:       Cross-compile support for Win and UNIX (backported)
	* unix/configure:    (autoconf-2.59)
	* win/tcl.m4:
	* win/configure.in:
	* win/configure:     (autoconf-2.59)
	* win/tkWin32Dll.c:  SEH-emulation for AMD64